<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_namer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/title_new_namer"
        android:text="@string/add_namer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    
    <TextView
        android:id="@+id/lbl_new_namer"
        android:text="@string/add_namer_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/title_new_namer"
        android:layout_below="@id/title_new_namer"
        />
    
    <EditText
        android:id="@+id/txt_new_namer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_new_namer"
        android:layout_below="@id/lbl_new_namer"
        android:hint="@string/add_namer_hint"
        android:inputType="text"
        android:maxLength="16"
        />
	<LinearLayout
	    android:id="@+id/wrapper_cancel_save"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/txt_new_namer"
	    android:weightSum="2"
	    >
	    <Button
	        android:id="@+id/btn_new_namer_cancel"
	        android:text="@string/action_cancel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	    <Button
	        android:id="@+id/btn_new_namer_save"
	        android:text="@string/action_save"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	</LinearLayout>
</RelativeLayout>
