<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewHd"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<RelativeLayout
    android:id="@+id/visit_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vegnab.vegnab.NewVisit$PlaceholderFragment" >

    <TextView
        android:id="@+id/visit_header_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_header_title" />
    
    <TextView
        android:id="@+id/lbl_visit_name"
        android:text="@string/visit_header_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/visit_header_title_text"
        android:layout_below="@id/visit_header_title_text"
        />

    <EditText
        android:id="@+id/txt_visit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_visit_name"
        android:layout_below="@id/lbl_visit_name"
        android:hint="@string/visit_header_hint_name"
        android:inputType="text"
        android:maxLength="16" />
    
    
    
    <Button
        android:id="@+id/visit_header_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_header_go_button_msg"
        android:padding="5dp"
        android:layout_below="@id/visit_header_title_text"
        />
</RelativeLayout>
</ScrollView>
